raffia/tests/error/scss/at-rule/function/missing-parens.snap
---
source: raffia/tests/error.rs
---
error: expect token `(`, but `{` received
  ┌─ missing-parens.scss:1:16
  │
1 │ @function test {}
  │                ^


